Added example with http-args
